# embedded

./: CoAP_MQTT_AMQP.ipynb  Embedded_Systems_Energy_Class.md  HTTP_HTML.ipynb  MultiTask.ipynb  MultipleSockets.ipynb  PIO_RP2.ipynb  PubSub_client.py  PubSub_server.py  README.md  Resumen de Protocolos de Sincronizació.md  Websocket.md  WiFi_Sockets.ipynb  energy_units_and_regulator_efficiency.md  mqtt-demo.html  robot_class.html  robot_coreografía.html  rtc.py  topics.md  uPy_hacks.md
Num/: Num_2_Métodos_Directos_Error.ipynb
broker/: PubSub_aruco_corners_python.py  PubSub_aruco_position_python.py  PubSub_client_python.py  PubSub_client_web.html  PubSub_clinet_micropython.py  PubSub_server_python.py  README.md  simple_server.py
broker/3D/: CorridorScene.js  RoDifArm.js
broker/simpleBroker/: PubSub_client_web.html  README.md  simple_server.py  uPy_client.py
broker/simpleBroker/3D/: CorridorScene.js
doc/: README.MD
led_button_print/: CMakeLists.txt  led_button.c
led_button_print_rtc/: CMakeLists.txt  led_button.c
others/: Rubric.md  calif.txt  car_search.html  car_search_oop.html  classes.md  exam.md  rubric_expo.md
practice/: RC_ADC_sampling.md  Robotic Arm Control with MicroPython —.md  accelerating.md
robot/: README.md
virtual/: mearm.html  mearm_class.html  mearm_inv_kin_flb.html  mearm_oop.html  mearm_seq.html  pico_virtual3.html  pico_virtual4.html  pico_virtual5.html  robot_mearm.html
